fixed the overflow issue

--- a/resources/sass/modules/_module.scss
+++ b/resources/sass/modules/_module.scss
@@ -7,7 +7,7 @@
     }
     &__footer{
         padding-top: 20px;
-        position: absolute;
+        position: fixed;
         bottom: 0;
         margin-bottom: 0px;
         background-color: $primaryColor;
